# grpc-web-test

./: .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  package.json  run_envoy.sh  run_server.sh
client/main/: main.ts
client/renderer/: App.vue  index.pug  main.ts
cmake/: CompileOptions.cmake  Dependencies.cmake
conf/: envoy.yaml
protos/: echo.proto
server/: echo_server.cpp  echo_service.cpp  echo_service.hpp
